--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,9 @@
 # Environment variables for Bot or Not game
-# Copy this file to .env and add your actual values
+# Copy this file to .env and replace with your actual values
 
-# OpenAI API Key (required)
+# OpenAI API Key - Get from https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Optional: Set to production for deployment
-ENVIRONMENT=development
-
-# Optional: Custom port (default: 8000)
-PORT=8000
-
-# Optional: Host binding (default: 0.0.0.0)
+# Optional: Server configuration
 HOST=0.0.0.0
+PORT=8000
